{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 43,
  "lineage": "c4f0d592-2b33-954d-1df2-3c7df434ec36",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136629348357:loadbalancer/app/my-internal-lb/a52c5255021e03d6",
            "arn_suffix": "app/my-internal-lb/a52c5255021e03d6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-my-internal-lb-2065774042.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:136629348357:loadbalancer/app/my-internal-lb/a52c5255021e03d6",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-internal-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de1c626d4b17f5b8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023c24b71579d4c85"
              },
              {
                "subnet_id": "subnet-063b5dbda7d74086b"
              }
            ],
            "subnets": [
              "subnet-023c24b71579d4c85",
              "subnet-063b5dbda7d74086b"
            ],
            "vpc_id": "vpc-07aeb65db4c5d753f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136629348357:listener/app/my-internal-lb/a52c5255021e03d6/775f83746a5795fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:136629348357:targetgroup/ecs-target-group/cf2a65a06dbce4d8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:136629348357:listener/app/my-internal-lb/a52c5255021e03d6/775f83746a5795fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:136629348357:loadbalancer/app/my-internal-lb/a52c5255021e03d6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.internal_lb",
            "aws_lb_target_group.ecs_target_group",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136629348357:targetgroup/ecs-target-group/cf2a65a06dbce4d8",
            "arn_suffix": "targetgroup/ecs-target-group/cf2a65a06dbce4d8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:136629348357:targetgroup/ecs-target-group/cf2a65a06dbce4d8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07aeb65db4c5d753f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136629348357:security-group/sg-0de1c626d4b17f5b8",
            "description": "Allow all ports from 10.0.0.0/8",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de1c626d4b17f5b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow",
            "name_prefix": "",
            "owner_id": "136629348357",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07aeb65db4c5d753f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}